applications/package-manage/debug/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: packagemanage_debug
  name: packagemanage_debug
