applications/package-manage/debug/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: pkgmange-web-debug-ingress
spec:
  rules:
    - host: pkgmanagedebug.openeuler.org
      http:
        paths:
          - backend:
              serviceName: package-manage-web
              servicePort: 8080
            path: /
